--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,7 +1,8 @@
 .image-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 10px 10px;
+  gap: 0px 8px;
+  grid-auto-rows: 10px;
 }
 
 .image-list img {
